# name: TestDefCalibration.test_out[No-Params]
  '''
  DEFCAL Calibrate 0:
  	X 0
  '''
# ---
# name: TestDefCalibration.test_out[Params]
  '''
  DEFCAL Calibrate(%X) 0:
  	X 0
  '''
# ---
# name: TestDefCalibration.test_str[No-Params]
  '''
  DEFCAL Calibrate 0:
  	X 0
  '''
# ---
# name: TestDefCalibration.test_str[Params]
  '''
  DEFCAL Calibrate(%X) 0:
  	X 0
  '''
# ---
# name: TestDefFrame.test_out[Frame-Only]
  'DEFFRAME 0 "frame":'
# ---
# name: TestDefFrame.test_out[With-Optionals]
  '''
  DEFFRAME 1 "frame":
  	direction: "direction"
  	sample_rate: 44.1
  	hardware_object: "hardware_object"
  	initial_frequency: 1.39
  	center_frequency: 440
  '''
# ---
# name: TestDefFrame.test_str[Frame-Only]
  'DEFFRAME 0 "frame":'
# ---
# name: TestDefFrame.test_str[With-Optionals]
  '''
  DEFFRAME 1 "frame":
  	initial_frequency: 1.39
  	hardware_object: "hardware_object"
  	direction: "direction"
  	center_frequency: 440
  	sample_rate: 44.1
  '''
# ---
# name: TestDefMeasureCalibration.test_out[MemoryReference]
  '''
  DEFCAL MEASURE 1 theta:
  	X 0
  
  '''
# ---
# name: TestDefMeasureCalibration.test_out[No-MemoryReference]
  '''
  DEFCAL MEASURE 0 :
  	X 0
  
  '''
# ---
# name: TestDefMeasureCalibration.test_out[qubit0-memory_reference0-instrs0]
  '''
  DEFCAL MEASURE 0 theta:
  	X 0
  
  '''
# ---
# name: TestGate.test_controlled_modifier[CPHASE-Expression]
  'CONTROLLED CPHASE(1.5707963267948966) 5 0 1'
# ---
# name: TestGate.test_controlled_modifier[RZ-MemoryReference-Expression]
  'CONTROLLED RZ((alpha[0]-beta[0])) 5 0'
# ---
# name: TestGate.test_controlled_modifier[RZ-MemoryReference]
  'CONTROLLED RZ(theta[0]) 5 0'
# ---
# name: TestGate.test_controlled_modifier[X-Gate]
  'CONTROLLED X 5 0'
# ---
# name: TestGate.test_dagger_modifier[CPHASE-Expression]
  'DAGGER CPHASE(1.5707963267948966) 0 1'
# ---
# name: TestGate.test_dagger_modifier[RZ-MemoryReference-Expression]
  'DAGGER RZ((alpha[0]-beta[0])) 0'
# ---
# name: TestGate.test_dagger_modifier[RZ-MemoryReference]
  'DAGGER RZ(theta[0]) 0'
# ---
# name: TestGate.test_dagger_modifier[X-Gate]
  'DAGGER X 0'
# ---
# name: TestGate.test_forked_modifier[CPHASE-Expression]
  'FORKED CPHASE(1.57079632679489660) 5 0 1'
# ---
# name: TestGate.test_forked_modifier[RZ-MemoryReference-Expression]
  'FORKED RZ((alpha[0]-beta[0])0) 5 0'
# ---
# name: TestGate.test_forked_modifier[RZ-MemoryReference]
  'FORKED RZ(theta[0]0) 5 0'
# ---
# name: TestGate.test_forked_modifier[X-Gate]
  'FORKED X 5 0'
# ---
# name: TestGate.test_repr[CPHASE-Expression]
  'Gate { name: "CPHASE", parameters: [Number(Complex { re: 1.5707963267948966, im: 0.0 })], qubits: [Fixed(0), Fixed(1)], modifiers: [] }'
# ---
# name: TestGate.test_repr[RZ-MemoryReference-Expression]
  'Gate { name: "RZ", parameters: [Infix(InfixExpression { left: Address(MemoryReference { name: "alpha", index: 0 }), operator: Minus, right: Address(MemoryReference { name: "beta", index: 0 }) })], qubits: [Fixed(0)], modifiers: [] }'
# ---
# name: TestGate.test_repr[RZ-MemoryReference]
  'Gate { name: "RZ", parameters: [Address(MemoryReference { name: "theta", index: 0 })], qubits: [Fixed(0)], modifiers: [] }'
# ---
# name: TestGate.test_repr[X-Gate]
  'Gate { name: "X", parameters: [], qubits: [Fixed(0)], modifiers: [] }'
# ---
# name: TestGate.test_str[CPHASE-Expression]
  'CPHASE(1.5707963267948966) 0 1'
# ---
# name: TestGate.test_str[RZ-MemoryReference-Expression]
  'RZ((alpha[0]-beta[0])) 0'
# ---
# name: TestGate.test_str[RZ-MemoryReference]
  'RZ(theta[0]) 0'
# ---
# name: TestGate.test_str[X-Gate]
  'X 0'
# ---
# name: TestMeasurement.test_out[FormalArgument]
  'MEASURE q theta'
# ---
# name: TestMeasurement.test_out[MemoryReference]
  'MEASURE 1 theta[0]'
# ---
# name: TestMeasurement.test_out[No-MemoryReference]
  'MEASURE 0'
# ---
# name: TestMeasurement.test_str[FormalArgument]
  'MEASURE q theta'
# ---
# name: TestMeasurement.test_str[MemoryReference]
  'MEASURE 1 theta[0]'
# ---
# name: TestMeasurement.test_str[No-MemoryReference]
  'MEASURE 0'
# ---
